--- a/Module 4 Assignment.ipynb
+++ b/Module 4 Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "29123f1f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "7df056bf",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "49bb60da",
    "metadata": {},
    "outputs": [
@@ -236,212 +236,7 @@
        "[65 rows x 8 columns]"
       ]
      },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>No.</th>\n",
-       "      <th>Pos</th>\n",
-       "      <th>Ht</th>\n",
-       "      <th>Wt</th>\n",
-       "      <th>Birth Date</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Exp</th>\n",
-       "      <th>College</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Player</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Donte DiVincenzo</th>\n",
-       "      <td>0</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>4-Jun</td>\n",
-       "      <td>203</td>\n",
-       "      <td>January 31 1997</td>\n",
-       "      <td>us</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Villanova</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Josh Hart</th>\n",
-       "      <td>3</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>4-Jun</td>\n",
-       "      <td>215</td>\n",
-       "      <td>March 6 1995</td>\n",
-       "      <td>us</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Villanova</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Isaiah Hartenstein</th>\n",
-       "      <td>55</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Jul-00</td>\n",
-       "      <td>250</td>\n",
-       "      <td>May 5 1998</td>\n",
-       "      <td>us</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jalen Brunson</th>\n",
-       "      <td>11</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>2-Jun</td>\n",
-       "      <td>190</td>\n",
-       "      <td>August 31 1996</td>\n",
-       "      <td>us</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Villanova</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Julius Randle</th>\n",
-       "      <td>30</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>8-Jun</td>\n",
-       "      <td>250</td>\n",
-       "      <td>November 29 1994</td>\n",
-       "      <td>us</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Kentucky</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>P.J. Tucker</th>\n",
-       "      <td>17</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>5-Jun</td>\n",
-       "      <td>245</td>\n",
-       "      <td>May 5 1985</td>\n",
-       "      <td>us</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Texas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Moussa Diabaté  (TW)</th>\n",
-       "      <td>25</td>\n",
-       "      <td>C</td>\n",
-       "      <td>11-Jun</td>\n",
-       "      <td>210</td>\n",
-       "      <td>January 21 2002</td>\n",
-       "      <td>fr</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Michigan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jordan Miller  (TW)</th>\n",
-       "      <td>11</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>7-Jun</td>\n",
-       "      <td>195</td>\n",
-       "      <td>January 23 2000</td>\n",
-       "      <td>us</td>\n",
-       "      <td>R</td>\n",
-       "      <td>George Mason Miami (FL)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Xavier Moon  (TW)</th>\n",
-       "      <td>22</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>2-Jun</td>\n",
-       "      <td>165</td>\n",
-       "      <td>January 2 1995</td>\n",
-       "      <td>us</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Northwest Florida State College Morehead State...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Joshua Primo</th>\n",
-       "      <td>12</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>6-Jun</td>\n",
-       "      <td>190</td>\n",
-       "      <td>December 24 2002</td>\n",
-       "      <td>ca</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>65 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      No. Pos      Ht   Wt        Birth Date Unnamed: 6 Exp  \\\n",
-       "Player                                                                        \n",
-       "Donte DiVincenzo        0  SG   4-Jun  203   January 31 1997         us   5   \n",
-       "Josh Hart               3  SF   4-Jun  215      March 6 1995         us   6   \n",
-       "Isaiah Hartenstein     55   C  Jul-00  250        May 5 1998         us   5   \n",
-       "Jalen Brunson          11  PG   2-Jun  190    August 31 1996         us   5   \n",
-       "Julius Randle          30  PF   8-Jun  250  November 29 1994         us   9   \n",
-       "...                   ...  ..     ...  ...               ...        ...  ..   \n",
-       "P.J. Tucker            17  PF   5-Jun  245        May 5 1985         us  12   \n",
-       "Moussa Diabaté  (TW)   25   C  11-Jun  210   January 21 2002         fr   1   \n",
-       "Jordan Miller  (TW)    11  SF   7-Jun  195   January 23 2000         us   R   \n",
-       "Xavier Moon  (TW)      22  SG   2-Jun  165    January 2 1995         us   2   \n",
-       "Joshua Primo           12  SG   6-Jun  190  December 24 2002         ca   2   \n",
-       "\n",
-       "                                                                College  \n",
-       "Player                                                                   \n",
-       "Donte DiVincenzo                                              Villanova  \n",
-       "Josh Hart                                                     Villanova  \n",
-       "Isaiah Hartenstein                                                  NaN  \n",
-       "Jalen Brunson                                                 Villanova  \n",
-       "Julius Randle                                                  Kentucky  \n",
-       "...                                                                 ...  \n",
-       "P.J. Tucker                                                       Texas  \n",
-       "Moussa Diabaté  (TW)                                           Michigan  \n",
-       "Jordan Miller  (TW)                             George Mason Miami (FL)  \n",
-       "Xavier Moon  (TW)     Northwest Florida State College Morehead State...  \n",
-       "Joshua Primo                                                    Alabama  \n",
-       "\n",
-       "[65 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 22,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,13 +244,13 @@
    "source": [
     "# Bind rows the of 4 tables and add nationality column label\n",
     "nyk_tor_okc_lac_2023_24_rosters = pd.concat([nyk_roster_2023_24, tor_roster_2023_24, okc_roster_2023_24, lac_roster_2023_24])\n",
-    "nyk_tor_okc_lac_2023_24_rosters.rename(columns={\"Unnamed: 6\":\"Nationality\"})\n",
+    "nyk_tor_okc_lac_2023_24_rosters = nyk_tor_okc_lac_2023_24_rosters.rename(columns={\"Unnamed: 6\":\"Nationality\"})\n",
     "nyk_tor_okc_lac_2023_24_rosters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "24a8c534",
    "metadata": {},
    "outputs": [],
